// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when creating token 1`] = `
.c6 {
  color: #4945ff;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c4 {
  padding-right: 8px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c3 svg path {
  fill: #4945ff;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c89 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c0:focus-visible {
  outline: none;
}

.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c19 {
  padding-right: 56px;
  padding-left: 56px;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  color: #32324d;
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
}

.c18 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c15 {
  padding-right: 8px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c12 svg {
  height: 12px;
  width: 12px;
}

.c12 svg > g,
.c12 svg path {
  fill: #ffffff;
}

.c12[aria-disabled='true'] {
  pointer-events: none;
}

.c12:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c12:focus-visible {
  outline: none;
}

.c12:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c16 {
  height: 100%;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
}

.c13 .c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 .c17 {
  color: #ffffff;
}

.c13[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c13[aria-disabled='true'] .c17 {
  color: #666687;
}

.c13[aria-disabled='true'] svg > g,
.c13[aria-disabled='true'] svg path {
  fill: #666687;
}

.c13[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c13[aria-disabled='true']:active .c17 {
  color: #666687;
}

.c13[aria-disabled='true']:active svg > g,
.c13[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c13:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c13:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c13 svg > g,
.c13 svg path {
  fill: #ffffff;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c20 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c21 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c21 > * + * {
  margin-top: 24px;
}

.c23 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c23 > * + * {
  margin-top: 16px;
}

.c63 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c63 > * + * {
  margin-top: 8px;
}

.c11 > * {
  margin-left: 0;
  margin-right: 0;
}

.c11 > * + * {
  margin-left: 8px;
}

.c22 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c65 {
  background: #ffffff;
  padding: 16px;
}

.c59 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c62 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c88 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c25 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c60 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 0px;
}

.c26 {
  grid-column: span 6;
  max-width: 100%;
}

.c61 {
  grid-column: span 7;
  max-width: 100%;
}

.c87 {
  grid-column: span 5;
  max-width: 100%;
}

.c50 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c50:focus {
  outline: none;
}

.c50[aria-disabled='true'] {
  cursor: not-allowed;
}

.c53 {
  padding-right: 16px;
  padding-left: 16px;
}

.c55 {
  padding-left: 12px;
}

.c43 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c46 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c51 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c45 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c47 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c54 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c48 {
  line-height: 0;
}

.c44 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c44 > * + * {
  margin-top: 4px;
}

.c49 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c49:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c56 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c56 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c56 svg path {
  fill: #666687;
}

.c57 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c57 svg {
  width: 0.375rem;
}

.c52 {
  width: 100%;
}

.c37 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c39 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c40 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c41 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c41:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c42 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c42::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c42::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c42:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c42::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c42:focus-within {
  outline: none;
}

.c38 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c38 > * + * {
  margin-top: 4px;
}

.c36 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c36 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c36 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c36 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c36 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c27 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c30 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c33 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c29 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c31 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c32 {
  line-height: 0;
}

.c35 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c35::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c35::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c35:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c35::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c35[aria-disabled='true'] {
  color: inherit;
}

.c35:focus {
  outline: none;
  box-shadow: none;
}

.c34 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c34:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c28 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c28 > * + * {
  margin-top: 4px;
}

.c24 {
  color: #32324d;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c58 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c64 {
  color: #666687;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c79 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c80 {
  color: #4a4a6a;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c66 {
  border-radius: 4px;
}

.c69 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c72 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c75 {
  min-width: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c81 {
  background: #dcdce4;
  border-radius: 50%;
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c83 {
  color: #666687;
  width: 0.6875rem;
}

.c86 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c70 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c73 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c82 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c67 {
  border: 1px solid #f6f6f9;
}

.c67:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c67:hover:not([aria-disabled='true']) .sc-bpkNiN {
  color: #271fe0;
}

.c67:hover:not([aria-disabled='true']) .c78 {
  color: #4945ff;
}

.c67:hover:not([aria-disabled='true']) > .c68 {
  background: #f0f0ff;
}

.c67:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c85 {
  border: 1px solid #ffffff;
}

.c85:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c85:hover:not([aria-disabled='true']) .sc-bpkNiN {
  color: #271fe0;
}

.c85:hover:not([aria-disabled='true']) .c78 {
  color: #4945ff;
}

.c85:hover:not([aria-disabled='true']) > .c68 {
  background: #f0f0ff;
}

.c85:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c76 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c76[aria-disabled='true'] {
  pointer-events: none;
}

.c76[aria-disabled='true'] svg path {
  fill: #666687;
}

.c76 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c76 svg path {
  fill: #4945ff;
}

.c76:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c76:focus-visible {
  outline: none;
}

.c76:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c74 > * {
  margin-left: 0;
  margin-right: 0;
}

.c74 > * + * {
  margin-left: 12px;
}

.c84 path {
  fill: #666687;
}

.c77 {
  text-align: left;
}

.c77 > span {
  max-width: 100%;
}

.c77 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c77 svg path {
  fill: #8e8ea9;
}

.c71 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c71:hover svg path {
  fill: #4945ff;
}

@media (max-width:68.75rem) {
  .c26 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c26 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c61 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c61 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c87 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c87 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c4 c5"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c6"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <h1
                class="c9"
              >
                Create API Token
              </h1>
            </div>
            <div
              class="c10 c11"
              spacing="2"
            >
              <button
                aria-disabled="false"
                class="c12 c13"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class="c14 c15 c16"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c17 c18"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c19"
      >
        <div
          class="c20 c21"
          spacing="6"
        >
          <div
            class="c22"
          >
            <div
              class="c20 c23"
              spacing="4"
            >
              <h2
                class="c24"
              >
                Details
              </h2>
              <div
                class="c25"
              >
                <div
                  class="c26"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div>
                        <div
                          class="c27 c28"
                          spacing="1"
                        >
                          <label
                            class="c29"
                            for="textinput-1"
                            required=""
                          >
                            <div
                              class="c30"
                            >
                              Name
                              <span
                                class="c31 c32"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c33 c34"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              class="c35"
                              id="textinput-1"
                              name="name"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c26"
                >
                  <div
                    class=""
                  >
                    <div
                      class="c36"
                    >
                      <div>
                        <div
                          class="c37 c38"
                          spacing="1"
                        >
                          <div
                            class="c39"
                          >
                            <label
                              class="c40"
                              for="textarea-1"
                            >
                              <div
                                class="c39"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c41"
                          >
                            <textarea
                              aria-invalid="false"
                              class="c42"
                              id="textarea-1"
                              name="description"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c26"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c43 c44"
                        spacing="1"
                      >
                        <span
                          class="c45"
                          for="select-1"
                          id="select-1-label"
                          required=""
                        >
                          <div
                            class="c46"
                          >
                            Token duration
                            <span
                              class="c47 c48"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c46 c49"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-1-label select-1-content"
                            class="c50"
                            id="select-1"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c51 c52"
                          >
                            <div
                              class="c46"
                            >
                              <div
                                class="c53"
                              >
                                <span
                                  class="c54"
                                  id="select-1-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c46"
                            >
                              <button
                                aria-hidden="true"
                                class="c55 c56 c57"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c58"
                    />
                  </div>
                </div>
                <div
                  class="c26"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c43 c44"
                        spacing="1"
                      >
                        <span
                          class="c45"
                          for="select-2"
                          id="select-2-label"
                          required=""
                        >
                          <div
                            class="c46"
                          >
                            Token type
                            <span
                              class="c47 c48"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c46 c49"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-2-label select-2-content"
                            class="c50"
                            id="select-2"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c51 c52"
                          >
                            <div
                              class="c46"
                            >
                              <div
                                class="c53"
                              >
                                <span
                                  class="c54"
                                  id="select-2-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c46"
                            >
                              <button
                                aria-hidden="true"
                                class="c55 c56 c57"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c59 c60"
          >
            <div
              class="c61"
            >
              <div
                class="c62"
              >
                <div
                  class="c20 c63"
                  spacing="2"
                >
                  <h2
                    class="c24"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c64"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c65"
                >
                  <div
                    aria-disabled="false"
                    class="c66 c67"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c68 c69 c70 c71"
                      cursor=""
                    >
                      <div
                        class="c68 c72 c73 c74"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-1"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-1"
                          class="c68 c75 c73 c76 c77"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c78 c79"
                          >
                            <span
                              class="c78 sc-bpkNiN c80"
                              id="accordion-label-accordion-1"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c68 c73 c74"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c68 c81 c82"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c83 c84"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c66 c85"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c68 c86 c70 c71"
                      cursor=""
                    >
                      <div
                        class="c68 c72 c73 c74"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-2"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-2"
                          class="c68 c75 c73 c76 c77"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c78 c79"
                          >
                            <span
                              class="c78 sc-bpkNiN c80"
                              id="accordion-label-accordion-2"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c68 c73 c74"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c68 c81 c82"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c83 c84"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c87"
            >
              <div
                class="c88"
                style="min-height: 100%;"
              >
                <div
                  class="c20 c63"
                  spacing="2"
                >
                  <h3
                    class="c24"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c64"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c89"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when editing existing token 1`] = `
.c23 {
  background: #ffffff;
  padding: 24px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c25 {
  background: #f6f6f9;
  padding: 12px;
  border-radius: 4px;
}

.c24 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c27 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c28 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c28 > * + * {
  margin-top: 4px;
}

.c29 {
  font-weight: 500;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c31 {
  color: #666687;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c6 {
  color: #4945ff;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c4 {
  padding-right: 8px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c3 svg path {
  fill: #4945ff;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c26 {
  margin-right: 24px;
}

.c26 svg {
  width: 2rem;
  height: 2rem;
}

.c30 {
  word-break: break-all;
}

.c102 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c0:focus-visible {
  outline: none;
}

.c20 {
  padding-right: 56px;
  padding-left: 56px;
}

.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  color: #32324d;
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
}

.c18 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c15 {
  padding-right: 8px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c12 svg {
  height: 12px;
  width: 12px;
}

.c12 svg > g,
.c12 svg path {
  fill: #ffffff;
}

.c12[aria-disabled='true'] {
  pointer-events: none;
}

.c12:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c12:focus-visible {
  outline: none;
}

.c12:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c16 {
  height: 100%;
}

.c103 .c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c103 .c17 {
  color: #ffffff;
}

.c103[aria-disabled='true'] .c17 {
  color: #666687;
}

.c103[aria-disabled='true']:active .c17 {
  color: #666687;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c13 .c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 .c17 {
  color: #ffffff;
}

.c13[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c13[aria-disabled='true'] .c17 {
  color: #666687;
}

.c13[aria-disabled='true'] svg > g,
.c13[aria-disabled='true'] svg path {
  fill: #666687;
}

.c13[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c13[aria-disabled='true']:active .c17 {
  color: #666687;
}

.c13[aria-disabled='true']:active svg > g,
.c13[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c13:hover {
  background-color: #f6f6f9;
}

.c13:active {
  background-color: #eaeaef;
}

.c13 .c17 {
  color: #32324d;
}

.c13 svg > g,
.c13 svg path {
  fill: #32324d;
}

.c19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
}

.c19 .c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 .c17 {
  color: #ffffff;
}

.c19[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c19[aria-disabled='true'] .c17 {
  color: #666687;
}

.c19[aria-disabled='true'] svg > g,
.c19[aria-disabled='true'] svg path {
  fill: #666687;
}

.c19[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c19[aria-disabled='true']:active .c17 {
  color: #666687;
}

.c19[aria-disabled='true']:active svg > g,
.c19[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c19:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c19:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c19 svg > g,
.c19 svg path {
  fill: #ffffff;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c21 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c22 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c22 > * + * {
  margin-top: 24px;
}

.c33 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c33 > * + * {
  margin-top: 16px;
}

.c76 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c76 > * + * {
  margin-top: 8px;
}

.c11 > * {
  margin-left: 0;
  margin-right: 0;
}

.c11 > * + * {
  margin-left: 8px;
}

.c32 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c78 {
  background: #ffffff;
  padding: 16px;
}

.c72 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c75 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c101 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c35 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c73 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 0px;
}

.c36 {
  grid-column: span 6;
  max-width: 100%;
}

.c74 {
  grid-column: span 7;
  max-width: 100%;
}

.c100 {
  grid-column: span 5;
  max-width: 100%;
}

.c60 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c60:focus {
  outline: none;
}

.c60[aria-disabled='true'] {
  cursor: not-allowed;
}

.c63 {
  padding-right: 16px;
  padding-left: 16px;
}

.c65 {
  padding-left: 12px;
}

.c53 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c56 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c61 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c55 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c57 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c64 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c70 {
  color: #32324d;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c58 {
  line-height: 0;
}

.c54 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c54 > * + * {
  margin-top: 4px;
}

.c59 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  color: #666687;
  background: #eaeaef;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c59:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c69 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c69:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c66 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c66 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c66 svg path {
  fill: #666687;
}

.c67 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
  cursor: not-allowed;
}

.c67 svg {
  width: 0.375rem;
}

.c71 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c71 svg {
  width: 0.375rem;
}

.c62 {
  width: 100%;
}

.c47 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c49 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c50 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c51 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c51:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c52 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c52::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c52::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c52:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c52::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c52:focus-within {
  outline: none;
}

.c48 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c48 > * + * {
  margin-top: 4px;
}

.c46 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c46 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c46 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c46 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c46 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c37 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c40 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c43 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c39 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c41 {
  color: #d02b20;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c42 {
  line-height: 0;
}

.c45 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c45::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c45::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c45:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c45::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c45[aria-disabled='true'] {
  color: inherit;
}

.c45:focus {
  outline: none;
  box-shadow: none;
}

.c44 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c44:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c38 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c38 > * + * {
  margin-top: 4px;
}

.c34 {
  color: #32324d;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c68 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c77 {
  color: #666687;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c92 {
  color: #4945ff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c93 {
  color: #4a4a6a;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c79 {
  border-radius: 4px;
}

.c82 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c85 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c88 {
  min-width: 0px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c94 {
  background: #dcdce4;
  border-radius: 50%;
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c96 {
  color: #666687;
  width: 0.6875rem;
}

.c99 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c83 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c86 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c95 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c80 {
  border: 1px solid #f6f6f9;
}

.c80:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c80:hover:not([aria-disabled='true']) .sc-bpkNiN {
  color: #271fe0;
}

.c80:hover:not([aria-disabled='true']) .c91 {
  color: #4945ff;
}

.c80:hover:not([aria-disabled='true']) > .c81 {
  background: #f0f0ff;
}

.c80:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c98 {
  border: 1px solid #ffffff;
}

.c98:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c98:hover:not([aria-disabled='true']) .sc-bpkNiN {
  color: #271fe0;
}

.c98:hover:not([aria-disabled='true']) .c91 {
  color: #4945ff;
}

.c98:hover:not([aria-disabled='true']) > .c81 {
  background: #f0f0ff;
}

.c98:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c89 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c89[aria-disabled='true'] {
  pointer-events: none;
}

.c89[aria-disabled='true'] svg path {
  fill: #666687;
}

.c89 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c89 svg path {
  fill: #4945ff;
}

.c89:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c89:focus-visible {
  outline: none;
}

.c89:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c87 > * {
  margin-left: 0;
  margin-right: 0;
}

.c87 > * + * {
  margin-left: 12px;
}

.c97 path {
  fill: #666687;
}

.c90 {
  text-align: left;
}

.c90 > span {
  max-width: 100%;
}

.c90 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c90 svg path {
  fill: #8e8ea9;
}

.c84 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c84:hover svg path {
  fill: #4945ff;
}

@media (max-width:68.75rem) {
  .c36 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c36 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c74 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c74 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c100 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c100 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c4 c5"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c6"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <h1
                class="c9"
              >
                My super token
              </h1>
            </div>
            <div
              class="c10 c11"
              spacing="2"
            >
              <button
                aria-disabled="false"
                class="c12 c13"
                name="regenerate"
                type="button"
              >
                <div
                  aria-hidden="true"
                  class="c14 c15 c16"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M15.681 2.804A9.64 9.64 0 0011.818 2C6.398 2 2 6.48 2 12c0 5.521 4.397 10 9.818 10 2.03 0 4.011-.641 5.67-1.835a9.987 9.987 0 003.589-4.831 1.117 1.117 0 00-.664-1.418 1.086 1.086 0 00-1.393.676 7.769 7.769 0 01-2.792 3.758 7.546 7.546 0 01-4.41 1.428V4.222h.002a7.492 7.492 0 013.003.625 7.61 7.61 0 012.5 1.762l.464.551-2.986 3.042a.186.186 0 00.129.316H22V3.317a.188.188 0 00-.112-.172.179.179 0 00-.199.04l-2.355 2.4-.394-.468-.02-.02a9.791 9.791 0 00-3.239-2.293zm-3.863 1.418V2v2.222zm0 0v15.556c-4.216 0-7.636-3.484-7.636-7.778s3.42-7.777 7.636-7.778z"
                      fill="#212134"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <span
                  class="c17 c18"
                >
                  Regenerate
                </span>
              </button>
              <button
                aria-disabled="false"
                class="c12 c19"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class="c14 c15 c16"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c17 c18"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c20"
      >
        <div
          class="c21 c22"
          spacing="6"
        >
          <div
            class="c23 c24"
          >
            <div
              class="c25 c24 c26"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 14h-4.34a6 6 0 110-4H23v4h-2v4h-4v-4zM7 14a2 2 0 100-4 2 2 0 000 4z"
                  fill="#8E8EA9"
                />
              </svg>
            </div>
            <div
              class="c27 c28"
              spacing="1"
            >
              <div
                class="c24"
              >
                <span
                  class="c29 c30"
                >
                  This token isn’t accessible anymore.
                </span>
              </div>
              <span
                class="c31"
              >
                For security reasons, you can only see your token once.
              </span>
            </div>
          </div>
          <div
            class="c32"
          >
            <div
              class="c21 c33"
              spacing="4"
            >
              <h2
                class="c34"
              >
                Details
              </h2>
              <div
                class="c35"
              >
                <div
                  class="c36"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div>
                        <div
                          class="c37 c38"
                          spacing="1"
                        >
                          <label
                            class="c39"
                            for="textinput-6"
                            required=""
                          >
                            <div
                              class="c40"
                            >
                              Name
                              <span
                                class="c41 c42"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c43 c44"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              class="c45"
                              id="textinput-6"
                              name="name"
                              value="My super token"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c36"
                >
                  <div
                    class=""
                  >
                    <div
                      class="c46"
                    >
                      <div>
                        <div
                          class="c47 c48"
                          spacing="1"
                        >
                          <div
                            class="c49"
                          >
                            <label
                              class="c50"
                              for="textarea-6"
                            >
                              <div
                                class="c49"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c51"
                          >
                            <textarea
                              aria-invalid="false"
                              class="c52"
                              id="textarea-6"
                              name="description"
                            >
                              This describe my super token
                            </textarea>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c36"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c53 c54"
                        spacing="1"
                      >
                        <span
                          class="c55"
                          for="select-11"
                          id="select-11-label"
                          required=""
                        >
                          <div
                            class="c56"
                          >
                            Token duration
                            <span
                              class="c57 c58"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c56 c59"
                          disabled=""
                        >
                          <button
                            aria-disabled="true"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-11-label select-11-content"
                            class="c60"
                            id="select-11"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c61 c62"
                          >
                            <div
                              class="c56"
                            >
                              <div
                                class="c63"
                              >
                                <span
                                  class="c64"
                                  id="select-11-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c56"
                            >
                              <button
                                aria-hidden="true"
                                class="c65 c66 c67"
                                disabled=""
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c68"
                    >
                      Expiration date: Unlimited
                    </span>
                  </div>
                </div>
                <div
                  class="c36"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c53 c54"
                        spacing="1"
                      >
                        <span
                          class="c55"
                          for="select-12"
                          id="select-12-label"
                          required=""
                        >
                          <div
                            class="c56"
                          >
                            Token type
                            <span
                              class="c57 c58"
                            >
                              *
                            </span>
                          </div>
                        </span>
                        <div
                          class="c56 c69"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="select-12-label select-12-content"
                            class="c60"
                            id="select-12"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c61 c62"
                          >
                            <div
                              class="c56"
                            >
                              <div
                                class="c63"
                              >
                                <span
                                  class="c70"
                                  id="select-12-content"
                                >
                                  Read-only
                                </span>
                              </div>
                            </div>
                            <div
                              class="c56"
                            >
                              <button
                                aria-hidden="true"
                                class="c65 c66 c71"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c72 c73"
          >
            <div
              class="c74"
            >
              <div
                class="c75"
              >
                <div
                  class="c21 c76"
                  spacing="2"
                >
                  <h2
                    class="c34"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c77"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c78"
                >
                  <div
                    aria-disabled="false"
                    class="c79 c80"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c81 c82 c83 c84"
                      cursor=""
                    >
                      <div
                        class="c81 c85 c86 c87"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-7"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-7"
                          class="c81 c88 c86 c89 c90"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c91 c92"
                          >
                            <span
                              class="c91 sc-bpkNiN c93"
                              id="accordion-label-accordion-7"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c81 c86 c87"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c81 c94 c95"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c96 c97"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c79 c98"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c81 c99 c83 c84"
                      cursor=""
                    >
                      <div
                        class="c81 c85 c86 c87"
                        spacing="3"
                      >
                        <button
                          aria-controls="accordion-content-accordion-8"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-accordion-8"
                          class="c81 c88 c86 c89 c90"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c91 c92"
                          >
                            <span
                              class="c91 sc-bpkNiN c93"
                              id="accordion-label-accordion-8"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c81 c86 c87"
                          spacing="3"
                        >
                          <span
                            aria-hidden="true"
                            class="c81 c94 c95"
                            cursor="pointer"
                            data-strapi-dropdown="true"
                            height="2rem"
                            width="2rem"
                          >
                            <svg
                              class="c96 c97"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="0.6875rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c100"
            >
              <div
                class="c101"
                style="min-height: 100%;"
              >
                <div
                  class="c21 c76"
                  spacing="2"
                >
                  <h3
                    class="c34"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c77"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c102"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
